# Unfake

./: Fact_checks_PolitiFact.htm  README.md  pyproject.toml
api/: main.py  test.py  text_processing.py  types.py
data/: README.md  download.py
frontend/: app.js  index.html  styles.css
models/: gemini.py
notebooks/: gradient_boosting_classifier.pkl  model_comparison.ipynb  test.ipynb  tfidf_vectorizer.pkl  train.ipynb  train_article.ipynb  train_headline.ipynb
report/: CS_report_template.tex  deepwiki.txt  glossaries.tex  references.bib
report/chapters/: 00_i_abstract.tex  00_ii_acknowledgments.tex  01_introduction.tex  02_literature.tex  03_methodology.tex  04_results.tex  05_discussion.tex  06_conclusions.tex  07_reflection.tex  appendix_A.tex  appendix_B.tex
scraper/: politifact.py
