[project]
name = "unfake"
version = "0.1.0"
description = "Fake news detection using and Automated fact checking using AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "fastapi>=0.127.0",
  "matplotlib>=3.10.8",
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "requests>=2.32.5",
  "scikit-learn>=1.8.0",
  "seaborn>=0.13.2",
  "torch>=2.9.1",
  "tqdm>=4.67.1",
  "transformers>=4.57.3",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["ruff>=0.14.7"]

[tool.ruff]
indent-width = 2
